2006-12-13  Bruno Haible  <bruno@clisp.org>

	* modules/termcap-h (Include): Add termcap.h.

2006-12-13  Bruno Haible  <bruno@clisp.org>

	* build-aux/moopp (sed_remove_comments): Fix handling of character
	constants. Example:  '"' /* comment */ '"'
	(sed_remove_comments_ERE): New variable.

2006-12-13  Bruno Haible  <bruno@clisp.org>

	* modules/ostream (Makefile.am): List all generated files in the moopp
	rule.
	* modules/fd-ostream (Makefile.am): Likewise.
	* modules/file-ostream (Makefile.am): Likewise.
	* modules/html-ostream (Makefile.am): Likewise.
	* modules/iconv-ostream (Makefile.am): Likewise.
	* modules/memory-ostream (Makefile.am): Likewise.
	* modules/term-ostream (Makefile.am): Likewise.
	* modules/styled-ostream (Makefile.am): Likewise.
	* modules/html-styled-ostream (Makefile.am): Likewise.
	* modules/term-styled-ostream (Makefile.am): Likewise.

2006-12-12  Bruno Haible  <bruno@clisp.org>

	Fix moopp rules for parallel make.
	* build-aux/moopp: Generate source.h first and source.c last.
	* modules/ostream (Makefile.am): Rewrite the moopp rule so that all
	generated files depend on the generated .h file.
	* modules/fd-ostream (Makefile.am): Likewise.
	* modules/file-ostream (Makefile.am): Likewise.
	* modules/html-ostream (Makefile.am): Likewise.
	* modules/iconv-ostream (Makefile.am): Likewise.
	* modules/memory-ostream (Makefile.am): Likewise.
	* modules/term-ostream (Makefile.am): Likewise.
	* modules/styled-ostream (Makefile.am): Likewise.
	* modules/html-styled-ostream (Makefile.am): Likewise.
	* modules/term-styled-ostream (Makefile.am): Likewise.
	Reported by Ralf Wildenhues.

2006-12-12  Bruno Haible  <bruno@clisp.org>

	* build-aux/moopp (func_emit_priv_h, func_emit_vt_h,
	func_emit_source_h, func_emit_source_c): New functions.

2006-12-02  Bruno Haible  <bruno@clisp.org>

	Support 'text-decoration: underline' in terminal mode.
	* lib/term-styled-ostream.oo.c: Include cr-string.h.
	(enum CRXTextDecorationType): New type.