@@ -57,7 +57,8 @@ extern char * tparam (const char *str, void *buf, int bufsize, ...);
 /* API provided by
      - GNU ncurses in <term.h>, <curses.h>, <ncurses.h>,
      - OSF/1 curses in <term.h>, <curses.h>,
-     - Solaris, AIX, HP-UX, IRIX curses in <term.h>.  */
+     - Solaris, AIX, HP-UX, IRIX curses in <term.h>,
+     - gnulib's replacement.  */
 
 /* Instantiates a string capability with format strings.
    The return value is statically allocated and must not be freed.  */
