@@ -1,5 +1,14 @@
 2006-12-13  Bruno Haible  <bruno@clisp.org>
 
+	* lib/tparm.c: New file, based on a public-domain implementation part
+	of Cygwin.
+	* m4/termcap.m4 (gl_TERMCAP): AC_LIBOBJ of tparm.c if needed.
+	(gl_TERMCAP_BODY): Test whether the system has tparm().
+	* modules/termcap (Files): Add lib/tparm.c.
+	(Depends-on): Add c-ctype.
+
+2006-12-13  Bruno Haible  <bruno@clisp.org>
+
 	* modules/termcap-h (Include): Add termcap.h.
 
 2006-12-13  Bruno Haible  <bruno@clisp.org>
